# hiveverse_ws

./: robot_pink.urdf
install/: local_setup.sh  setup.sh
install/hive_robot_description/share/ament_index/resource_index/package_run_dependencies/: hive_robot_description
install/hive_robot_description/share/hive_robot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hive_robot_description/share/hive_robot_description/launch/: gazebo_model.launch.py  mono_robot_spawn.launch.py  multi_robot_spawn.launch.py  spawn_gz.launch.py
install/hive_robot_description/share/hive_robot_description/model/: caca.urdf.xacro  mk5_200.gazebo
install/hive_robot_description/share/hive_robot_description/model/mk5_200/: model.config
install/hive_robot_description/share/hive_robot_description/parameters/: bridge_parameters.yaml
install/hive_robot_description/share/hive_robot_description/urdf/: mk5_200.urdf  mk5_200.urdf.xacro
install/hive_robot_description/share/hive_robot_description/worlds/: hive_empty_world.world.sdf
log/: latest_build
src/hive_robot_description/: CMakeLists.txt  README_gazebo.txt  refresh_fuel_links.sh
src/hive_robot_description/launch/: hive_test_launch.py  publish_static_robot.launch.py  spawn_mk5_200.launch.py  view_model.launch.py
src/hive_robot_description/model/: bleu_robot.urdf  mk5_200.gazebo  mk5_200.urdf.xacro
src/hive_robot_description/model/mk5_200/: model.sdf
src/hive_robot_description/parameters/: bridge_parameters.yaml
src/hive_robot_description/src/: lidar_frame_mapper.cpp  multi_odom_tf_broadcaster.cpp  multi_robot_tf_and_lidar_mapper.cpp
src/hive_robot_description/urdf/: mk5_200.gazebo.xacro  mk5_200.sdf
src/hive_robot_description/worlds/: hive_empty_world.world.sdf  hive_test.world.sdf
